--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "grunt"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/lianghaoN/grunt-demo#readme",
   "devDependencies": {
-    "grunt": "^1.0.4",
-    "grunt-eslint": "^22.0.0"
+    "chai": "^4.2.0",
+    "grunt": ">=0.4.5",
+    "grunt-mocha": "^0.4.12"
   }
 }
